...
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/reference_number" />

        <TextView
            android:id="@+id/tvReferenceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@android:color/black"
...
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
...
